force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <displayFormat>Ref-{0000}</displayFormat>
        <label>Refferal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>