force-app/main/default/objects/Referral__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>220</length>
    <type>Text</type>
</CustomField>