force-app/main/default/objects/Referral__c/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <formula>TEXT(Lead__r.Enquiry_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Rating</label>
    <type>Text</type>
</CustomField>