force-app/main/default/objects/Referral__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <label>Referrer Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>