force-app/main/default/objects/Referral__c/fields/Reward_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reward_Amount__c</fullName>
    <label>Reward Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>