force-app/main/default/objects/Referral__c/fields/Reward_Currency__c.field-meta.xml
<CustomField>
    <fullName>Reward_Currency__c</fullName>
    <label>Reward Currency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>