force-app/main/default/objects/Referral__c/fields/Reward_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Reward_Date_c__c</fullName>
    <label>Reward_Date</label>
    <type>DateTime</type>
</CustomField>